# japanAI

./: .gitignore  ARCHITECTURE.md  README.md  main.py  pyproject.toml  requirements.txt  run_api.py
data/tokyo_transaction/: README.md
docs/: DAILY_LOG.md  FRONTEND_BACKEND_INTEGRATION.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.module.css  App.tsx  api.ts  index.css
japanai/: __init__.py  default_config.py  real_estate_graph.py
japanai/agents/: __init__.py
japanai/agents/analysts/: __init__.py  legal_analyst.py  location_analyst.py  policy_analyst.py  tax_analyst.py  yield_analyst.py
japanai/agents/managers/: __init__.py  research_manager.py  risk_manager.py
japanai/agents/researchers/: __init__.py  bear_researcher.py  bull_researcher.py
japanai/agents/risk_mgmt/: __init__.py  aggressive_debator.py  conservative_debator.py  neutral_debator.py
japanai/agents/trader/: __init__.py  trader.py
japanai/agents/utils/: __init__.py  agent_states.py  agent_utils.py  legal_tools.py  location_tools.py  memory.py  policy_tools.py  tax_tools.py  (+1 more)
japanai/api/: __init__.py  app.py
japanai/dataflows/: __init__.py  config.py  csv_vendor.py  interface.py  mock_vendor.py
japanai/graph/: __init__.py  conditional_logic.py  propagation.py  setup.py  signal_processing.py
japanai/llm_clients/: __init__.py  base_client.py  factory.py  openai_client.py
japanai/utils/: __init__.py  step_logger.py  token_usage_callback.py
scripts/: README.md  test_advise.py  test_advise.sh
skills/japan-realestate-csv/: SKILL.md  config.json
(+5 files in other folders)
